Add post excerpts in index

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://pawamoy.github.io" # the base hostname & protocol for your site
 github_username:  Pawamoy
+excerpt_separator: <!--more-->
 
 # Build settings
 markdown: kramdown
