Fix showing excerpts

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Timothée Mazzucotelli
 email: timothee.mazzucotelli@gmail.com
 description: Findings, thoughts, tutorials, work. Pieces of my mind!
 
-show_excerpt: true
+show_excerpts: true
 
 github_username: Pawamoy
 
