Use pretty permalinks, except for old posts

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ minima:
 # Build settings
 markdown: kramdown
 remote_theme: pawamoy/jekyll-readthedocs
+permalink: pretty
 plugins:
   - jekyll-feed
 
