Update my about page (wip)

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ReadTheBlog
 author: Timothée Mazzucotelli
-email: timothee.mazzucotelli@pm.com
+email: timothee.mazzucotelli@pm.me
 description: Findings, thoughts, tutorials, work. Pieces of my mind!
 
 show_excerpts: true
