Add social accounts links

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ description: Findings, thoughts, tutorials, work. Pieces of my mind!
 show_excerpts: true
 
 github_username: pawamoy
+twitter_username: pawamoy
+instagram_username: paaawamoy
+linkedin_username: timothée-mazzucotelli-0321607b
 
 disqus:
   shortname: pawamoy
