--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - About: about.md
   - Credits: credits.md
   - Posts:
+      - posts/how-to-deal-with-jinja2-spacing.md
       - posts/unify-logging-for-a-gunicorn-uvicorn-app.md
       - posts/save-pytest-logs-as-artifact-gitlab-ci.md
       - posts/challenge-fill-space-one-line-90-degree-same-direction.md
