Add local HTTP server post

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Credits: credits.md
   - Posts:
       - 2020:
+        - posts/local-http-server-fake-files-testing-purposes.md
         - posts/pass-makefile-args-as-typed-in-command-line.md
         - posts/plugins-as-python-native-namespace-packages.md
         - posts/howto-edit-git-commit-contents.md
