--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ extra_css:
 markdown_extensions:
   - meta
   - admonition
+  - pymdownx.details
   - pymdownx.highlight
   - pymdownx.superfences
   - pymdownx.tasklist
