--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,68 +9,86 @@ nav:
   - About: about.md
   - Credits: credits.md
   - Posts:
-      - 2023:
-        - posts/tips-for-writing-good-python-cli-libraries.md
-      - 2022:
-        - posts/somewhat-modern-python-development.md
-        - posts/testing-fastapi-ormar-alembic-apps.md
-        - posts/add-alembic-migrations-to-existing-fastapi-ormar-project.md
-      - 2020:
-        - posts/local-http-server-fake-files-testing-purposes.md
-        - posts/pass-makefile-args-as-typed-in-command-line.md
-        - posts/plugins-as-python-native-namespace-packages.md
-        - posts/howto-edit-git-commit-contents.md
-        - posts/migrate-disqus-comments-to-utterances-github.md
-        - posts/how-to-deal-with-jinja2-spacing.md
-        - posts/unify-logging-for-a-gunicorn-uvicorn-app.md
-      - 2019:
-        - posts/save-pytest-logs-as-artifact-gitlab-ci.md
-        - posts/challenge-fill-space-one-line-90-degree-same-direction.md
-      - 2018:
-        - posts/django-auth-server-for-shiny.md
-        - posts/dual-screens-setup-nvidia-bunsenlabs-debian-jessie.md
-        - posts/docker-compose-django-postgres-nginx.md
-      - 2017:
-        - posts/python-static-code-analysis-tools.md
-      - 2016:
-        - posts/write-and-use-a-tox-plugin-from-inside-your-package.md
-        - posts/documentation-in-your-shell-scripts-using-shellman.md
-        - posts/django-dashboard-with-suit-and-highcharts.md
+    # - 2023:
+    #   - posts/tips-for-writing-good-python-cli-libraries.md
+    - 2022:
+      - posts/somewhat-modern-python-development.md
+      - posts/testing-fastapi-ormar-alembic-apps.md
+      - posts/add-alembic-migrations-to-existing-fastapi-ormar-project.md
+    - 2020:
+      - posts/local-http-server-fake-files-testing-purposes.md
+      - posts/pass-makefile-args-as-typed-in-command-line.md
+      - posts/plugins-as-python-native-namespace-packages.md
+      - posts/howto-edit-git-commit-contents.md
+      - posts/migrate-disqus-comments-to-utterances-github.md
+      - posts/how-to-deal-with-jinja2-spacing.md
+      - posts/unify-logging-for-a-gunicorn-uvicorn-app.md
+    - 2019:
+      - posts/save-pytest-logs-as-artifact-gitlab-ci.md
+      - posts/challenge-fill-space-one-line-90-degree-same-direction.md
+    - 2018:
+      - posts/django-auth-server-for-shiny.md
+      - posts/dual-screens-setup-nvidia-bunsenlabs-debian-jessie.md
+      - posts/docker-compose-django-postgres-nginx.md
+    - 2017:
+      - posts/python-static-code-analysis-tools.md
+    - 2016:
+      - posts/write-and-use-a-tox-plugin-from-inside-your-package.md
+      - posts/documentation-in-your-shell-scripts-using-shellman.md
+      - posts/django-dashboard-with-suit-and-highcharts.md
   - Showcase:
-      - Showcase Grid: showcase.md
-      - Projects:
-        - showcase/aria2p.md
-        - showcase/mkdocstrings.md
-        - showcase/copier-pdm.md
-        - showcase/pytkdocs.md
-        - showcase/git-changelog.md
-        - showcase/shell-history.md
-        - showcase/failprint.md
-        - showcase/dependenpy.md
-        - showcase/mvodb.md
-        - showcase/shelldemo.md
-        - showcase/shellman.md
-      # - showcase/shellm/coverage.md
-      # - showcase/shellm/debug.md
-      # - showcase/shellm/profiler.md
-      # - showcase/shellm/trace.md
-      # - showcase/shellm/loop.md
-      # - showcase/privibot.md
-      # - showcase/pawabot.md
+    - Showcase Grid: showcase.md
+    - Projects:
+      - showcase/aria2p.md
+      - showcase/mkdocstrings.md
+      - showcase/copier-pdm.md
+      - showcase/pytkdocs.md
+      - showcase/git-changelog.md
+      - showcase/shell-history.md
+      - showcase/failprint.md
+      - showcase/dependenpy.md
+      - showcase/mvodb.md
+      - showcase/shelldemo.md
+      - showcase/shellman.md
+    # - showcase/shellm/coverage.md
+    # - showcase/shellm/debug.md
+    # - showcase/shellm/profiler.md
+    # - showcase/shellm/trace.md
+    # - showcase/shellm/loop.md
+    # - showcase/privibot.md
+    # - showcase/pawabot.md
+  - Insiders: insiders.md
 
 theme:
   name: material
+  custom_dir: docs/templates
   icon:
     logo: material/currency-sign
   features:
+  - announce.dismiss
+  - content.action.edit
+  - content.action.view
   - content.code.annotate
+  - content.code.copy
+  - content.tooltips
+  - navigation.footer
+  - navigation.indexes
+  - navigation.sections
   - navigation.tabs
+  - navigation.tabs.sticky
   - navigation.top
+  - search.highlight
+  - search.suggest
+  - toc.follow
   palette:
+  - media: "(prefers-color-scheme)"
+    toggle:
+      icon: material/brightness-auto
+      name: Switch to light mode
   - media: "(prefers-color-scheme: light)"
     scheme: default
     primary: teal
-    accent: pink
+    accent: purple
     toggle:
       icon: material/weather-sunny
       name: Switch to dark mode
@@ -80,88 +98,104 @@ theme:
     accent: lime
     toggle:
       icon: material/weather-night
-      name: Switch to light mode
-  custom_dir: docs/templates
+      name: Switch to system preference
 
 extra_css:
-  - css/custom.css
+- css/custom.css
+- css/insiders.css
 
 markdown_extensions:
-  - meta
-  - admonition
-  - callouts
-  - pymdownx.blocks.admonition
-  - pymdownx.details
-  - pymdownx.highlight
-  - pymdownx.superfences
-  - pymdownx.tasklist
-  - pymdownx.emoji
-  - pymdownx.magiclink
-  - pymdownx.tabbed:
-      alternate_style: true
-  - toc:
-      permalink: "¤"
+- admonition
+- attr_list
+- callouts
+- footnotes
+- md_in_html
+- meta
+- pymdownx.blocks.admonition
+- pymdownx.details
+- pymdownx.emoji:
+    emoji_index: !!python/name:materialx.emoji.twemoji
+    emoji_generator: !!python/name:materialx.emoji.to_svg
+- pymdownx.magiclink
+- pymdownx.snippets:
+    check_paths: true
+    base_path: [docs/snippets, "."]
+- pymdownx.highlight
+- pymdownx.superfences:
+    custom_fences:
+    - name: mermaid
+      class: mermaid
+      format: !!python/name:pymdownx.superfences.fence_code_format
+- pymdownx.tabbed:
+    alternate_style: true
+    slugify: !!python/object/apply:pymdownx.slugs.slugify
+      kwds:
+        case: lower
+- pymdownx.tasklist:
+    custom_checkbox: true
+- toc:
+    permalink: "¤"
 
 plugins:
-  - search
-  - markdown-exec
-  - redirects:
-      redirect_maps:
-        # mkdocstrings
-        mkdocstrings.md: https://mkdocstrings.github.io/
-        mkdocstrings/usage.md: https://mkdocstrings.github.io/usage/
-        mkdocstrings/handlers/overview.md: https://mkdocstrings.github.io/handlers/overview/
-        mkdocstrings/handlers/python.md: https://mkdocstrings.github.io/handlers/python/
-        mkdocstrings/reference/handlers/base.md: https://mkdocstrings.github.io/reference/handlers/base/
-        mkdocstrings/reference/handlers/python.md: https://mkdocstrings.github.io/reference/handlers/python/
-        mkdocstrings/reference/extension.md: https://mkdocstrings.github.io/reference/extension/
-        mkdocstrings/reference/plugin.md: https://mkdocstrings.github.io/reference/plugin/
-        mkdocstrings/reference/references.md: https://mkdocstrings.github.io/reference/references/
-        mkdocstrings/troubleshooting.md: https://mkdocstrings.github.io/troubleshooting/
-        mkdocstrings/contributing.md: https://mkdocstrings.github.io/contributing/
-        mkdocstrings/code_of_conduct.md: https://mkdocstrings.github.io/code_of_conduct/
-        mkdocstrings/changelog.md: https://mkdocstrings.github.io/changelog/
-        mkdocstrings/credits.md: https://mkdocstrings.github.io/credits/
-        mkdocstrings/license.md: https://mkdocstrings.github.io/license/
+- search
+- markdown-exec
+- redirects:
+    redirect_maps:
+      # mkdocstrings
+      mkdocstrings.md: https://mkdocstrings.github.io/
+      mkdocstrings/usage.md: https://mkdocstrings.github.io/usage/
+      mkdocstrings/handlers/overview.md: https://mkdocstrings.github.io/handlers/overview/
+      mkdocstrings/handlers/python.md: https://mkdocstrings.github.io/handlers/python/
+      mkdocstrings/reference/handlers/base.md: https://mkdocstrings.github.io/reference/handlers/base/
+      mkdocstrings/reference/handlers/python.md: https://mkdocstrings.github.io/reference/handlers/python/
+      mkdocstrings/reference/extension.md: https://mkdocstrings.github.io/reference/extension/
+      mkdocstrings/reference/plugin.md: https://mkdocstrings.github.io/reference/plugin/
+      mkdocstrings/reference/references.md: https://mkdocstrings.github.io/reference/references/
+      mkdocstrings/troubleshooting.md: https://mkdocstrings.github.io/troubleshooting/
+      mkdocstrings/contributing.md: https://mkdocstrings.github.io/contributing/
+      mkdocstrings/code_of_conduct.md: https://mkdocstrings.github.io/code_of_conduct/
+      mkdocstrings/changelog.md: https://mkdocstrings.github.io/changelog/
+      mkdocstrings/credits.md: https://mkdocstrings.github.io/credits/
+      mkdocstrings/license.md: https://mkdocstrings.github.io/license/
 
-        # pytkdocs
-        pytkdocs.md: https://mkdocstrings.github.io/pytkdocs/
-        pytkdocs/reference/__init__.md: https://mkdocstrings.github.io/pytkdocs/reference/__init__/
-        pytkdocs/reference/__main__.md: https://mkdocstrings.github.io/pytkdocs/reference/__main__/
-        pytkdocs/reference/cli.md: https://mkdocstrings.github.io/pytkdocs/reference/cli/
-        pytkdocs/reference/loader.md: https://mkdocstrings.github.io/pytkdocs/reference/loader/
-        pytkdocs/reference/objects.md: https://mkdocstrings.github.io/pytkdocs/reference/objects/
-        pytkdocs/reference/parsers/__init__.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/__init__/
-        pytkdocs/reference/parsers/attributes.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/attributes/
-        pytkdocs/reference/parsers/docstrings/__init__.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/docstrings/__init__/
-        pytkdocs/reference/parsers/docstrings/base.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/docstrings/base/
-        pytkdocs/reference/parsers/docstrings/google.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/docstrings/google/
-        pytkdocs/reference/properties.md: https://mkdocstrings.github.io/pytkdocs/reference/properties/
-        pytkdocs/reference/serializer.md: https://mkdocstrings.github.io/pytkdocs/reference/serializer/
-        pytkdocs/contributing.md: https://mkdocstrings.github.io/pytkdocs/contributing/
-        pytkdocs/code_of_conduct.md: https://mkdocstrings.github.io/pytkdocs/code_of_conduct/
-        pytkdocs/changelog.md: https://mkdocstrings.github.io/pytkdocs/changelog/
-        pytkdocs/credits.md: https://mkdocstrings.github.io/pytkdocs/credits/
+      # pytkdocs
+      pytkdocs.md: https://mkdocstrings.github.io/pytkdocs/
+      pytkdocs/reference/__init__.md: https://mkdocstrings.github.io/pytkdocs/reference/__init__/
+      pytkdocs/reference/__main__.md: https://mkdocstrings.github.io/pytkdocs/reference/__main__/
+      pytkdocs/reference/cli.md: https://mkdocstrings.github.io/pytkdocs/reference/cli/
+      pytkdocs/reference/loader.md: https://mkdocstrings.github.io/pytkdocs/reference/loader/
+      pytkdocs/reference/objects.md: https://mkdocstrings.github.io/pytkdocs/reference/objects/
+      pytkdocs/reference/parsers/__init__.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/__init__/
+      pytkdocs/reference/parsers/attributes.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/attributes/
+      pytkdocs/reference/parsers/docstrings/__init__.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/docstrings/__init__/
+      pytkdocs/reference/parsers/docstrings/base.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/docstrings/base/
+      pytkdocs/reference/parsers/docstrings/google.md: https://mkdocstrings.github.io/pytkdocs/reference/parsers/docstrings/google/
+      pytkdocs/reference/properties.md: https://mkdocstrings.github.io/pytkdocs/reference/properties/
+      pytkdocs/reference/serializer.md: https://mkdocstrings.github.io/pytkdocs/reference/serializer/
+      pytkdocs/contributing.md: https://mkdocstrings.github.io/pytkdocs/contributing/
+      pytkdocs/code_of_conduct.md: https://mkdocstrings.github.io/pytkdocs/code_of_conduct/
+      pytkdocs/changelog.md: https://mkdocstrings.github.io/pytkdocs/changelog/
+      pytkdocs/credits.md: https://mkdocstrings.github.io/pytkdocs/credits/
 
-        # old posts
-        2020/06/02/unify-logging-for-a-gunicorn-uvicorn-app.md: posts/unify-logging-for-a-gunicorn-uvicorn-app.md
-        2019/10/17/save-pytest-logs-as-artifact-gitlab-ci.md: posts/save-pytest-logs-as-artifact-gitlab-ci.md
-        2019/02/01/challenge-fill-space-one-line-90-degree-same-direction.md: posts/challenge-fill-space-one-line-90-degree-same-direction.md
-        2018/03/15/django-auth-server-for-shiny.md: posts/django-auth-server-for-shiny.md
-        2018/03/09/dual-screens-setup-nvidia-bunsenlabs-debian-jessie.md: posts/dual-screens-setup-nvidia-bunsenlabs-debian-jessie.md
-        2018/02/01/docker-compose-django-postgres-nginx.html.md: posts/docker-compose-django-postgres-nginx.md
-        2017/05/31/python-static-code-analysis-tools.html.md: posts/python-static-code-analysis-tools.md
-        2016/12/07/documentation-in-your-shell-scripts-using-shellman.html.md: posts/documentation-in-your-shell-scripts-using-shellman.md
-        2016/12/07/write-and-use-a-tox-plugin-from-inside-your-package.html.md: posts/write-and-use-a-tox-plugin-from-inside-your-package.md
-        2016/04/06/django-dashboard-with-suit-and-highcharts.html.md: posts/django-dashboard-with-suit-and-highcharts.md
+      # old posts
+      2020/06/02/unify-logging-for-a-gunicorn-uvicorn-app.md: posts/unify-logging-for-a-gunicorn-uvicorn-app.md
+      2019/10/17/save-pytest-logs-as-artifact-gitlab-ci.md: posts/save-pytest-logs-as-artifact-gitlab-ci.md
+      2019/02/01/challenge-fill-space-one-line-90-degree-same-direction.md: posts/challenge-fill-space-one-line-90-degree-same-direction.md
+      2018/03/15/django-auth-server-for-shiny.md: posts/django-auth-server-for-shiny.md
+      2018/03/09/dual-screens-setup-nvidia-bunsenlabs-debian-jessie.md: posts/dual-screens-setup-nvidia-bunsenlabs-debian-jessie.md
+      2018/02/01/docker-compose-django-postgres-nginx.html.md: posts/docker-compose-django-postgres-nginx.md
+      2017/05/31/python-static-code-analysis-tools.html.md: posts/python-static-code-analysis-tools.md
+      2016/12/07/documentation-in-your-shell-scripts-using-shellman.html.md: posts/documentation-in-your-shell-scripts-using-shellman.md
+      2016/12/07/write-and-use-a-tox-plugin-from-inside-your-package.html.md: posts/write-and-use-a-tox-plugin-from-inside-your-package.md
+      2016/04/06/django-dashboard-with-suit-and-highcharts.html.md: posts/django-dashboard-with-suit-and-highcharts.md
 
 extra:
   social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/pawamoy
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/pawamoy
-    - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/timothée-mazzucotelli-0321607b/
-    - icon: fontawesome/brands/instagram
-      link: https://instagram.com/paaawamoy
+  - icon: fontawesome/brands/github
+    link: https://github.com/pawamoy
+  - icon: fontawesome/brands/mastodon
+    link: https://fosstodon.org/@pawamoy
+  - icon: fontawesome/brands/twitter
+    link: https://twitter.com/pawamoy
+  - icon: fontawesome/brands/linkedin
+    link: https://linkedin.com/in/timothée-mazzucotelli-0321607b/
