Add post about tingling sensation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Credits: credits.md
   - Posts:
     - 2024:
+      - posts/tingling-sensation-witnessing-existence.md
       - posts/steam-linux-alvr-quest2.md
     - 2023:
       # - posts/tips-for-writing-good-python-cli-libraries.md
