Fix showcase nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ nav:
       - showcase/aria2p.md
       - showcase/copier-pdm.md
       - showcase/dependenpy.md
-      - showcase/failprint.md
+      - showcase/duty.md
       - showcase/griffe.md
       - showcase/git-changelog.md
       - showcase/mkdocstrings.md
