List mdformat and linkchecker dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+linkchecker
 mkdocs
 mkdocs-material
 mkdocs-redirects
 mkdocstrings-python
 markdown-exec
 markdown-callouts
+mdformat
+mdformat-admon
+mdformat-footnote
+mdformat-frontmatter
+mdformat-gfm
+mdformat-mkdocs
+mdformat-ruff
+mdformat-simple-breaks
+mdformat-tables
