Add post about pytest fixtures

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Credits: credits.md
   - Posts:
     - 2024:
+      - posts/same-pytest-fixtures-with-different-scopes.md
       - posts/tingling-sensation-witnessing-existence.md
       - posts/steam-linux-alvr-quest2.md
     - 2023:
