--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,8 +127,8 @@ markdown_extensions:
 - pymdownx.blocks.tab
 - pymdownx.details
 - pymdownx.emoji:
-    emoji_index: !!python/name:materialx.emoji.twemoji
-    emoji_generator: !!python/name:materialx.emoji.to_svg
+    emoji_index: !!python/name:material.extensions.emoji.twemoji
+    emoji_generator: !!python/name:material.extensions.emoji.to_svg
 - pymdownx.magiclink
 - pymdownx.snippets:
     check_paths: true
